--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,7 @@
 /* Global rules */
 .topnav {
     margin: auto;
-    background-color: rgb(95,95,95);
+    background-color: #d4a59a;
     overflow: auto;
 }
 
